# deepscientist

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  pytest.ini
deepscientist/: factory.py  settings.py
deepscientist/agents/: __init__.py
deepscientist/agents/analyst/: __init__.py  agent.py  system_prompt.py
deepscientist/agents/file_upload/: __init__.py  agent.py  system_prompt.py
deepscientist/agents/hypothesis/: __init__.py  agent.py  system_prompt.py
deepscientist/agents/literature/: __init__.py  agent.py  system_prompt.py
deepscientist/agents/planning/: __init__.py  agent.py  system_prompt.py
deepscientist/agents/reflection/: __init__.py  agent.py  system_prompt.py
deepscientist/agents/reply/: __init__.py  agent.py  system_prompt.py
deepscientist/orchestrator/: agent.py  system_prompt.py
deepscientist/tools/: __init__.py  filesystem.py  literature.py  sandbox.py  search.py  utils.py
deepscientist/tools/clients/: common_http.py  searxng_client.py  settings.py  utils.py
searxng/: settings.yml
tests/: README.md  conftest.py
tests/integration/: test_agents_integration.py  test_search_integration.py
tests/unit/: test_agents.py  test_clients.py  test_orchestrator.py  test_search_tools.py
