[project]
name = "deepscientist"
version = "0.1.0"
description = "AI-powered scientific research assistant with knowledge graph capabilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents",
    "literature-retrieval-engine",
    "langchain",
    "langchain-anthropic",
    "langchain-openai",
    "llm-sandbox",
    "python-dotenv",
    "pydantic",
    "typing_extensions",
]

[project.optional-dependencies]
viz = ["neo4j-viz", "pyvis"]

[tool.uv.sources]
deepagents = { git = "https://github.com/j0yk1ll/deepagents.git", branch = "main", subdirectory = "libs/deepagents" }
literature-retrieval-engine = { git = "ssh://git@github.com/j0yk1ll/literature-retrieval-engine.git", branch = "main" }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
tests = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "httpx",
]
