[project]
name = "deepscientist"
version = "0.1.0"
description = "An AI Scientist for Autonomous Deep Research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents",
    "literature-retrieval-engine",
    "langchain",
    "langchain-anthropic",
    "langchain-openai",
    "llm-sandbox",
    "python-dotenv",
    "pydantic",
    "typing_extensions",
]

[dependency-groups]
dev = [
    "langfuse",
    "responses",
    "ruff",
    "mypy",
    "types-requests",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-timeout",
    "httpx",
]


[tool.uv.sources]
deepagents = { git = "https://github.com/j0yk1ll/deepagents.git", branch = "master", subdirectory = "libs/deepagents" }
literature-retrieval-engine = { git = "https://github.com/j0yk1ll/literature-retrieval-engine.git", branch = "main" }
